Commit 2 - Importazione ulteriori librerie e implementazione parser JSON e download file csv